Semi-working now
There is a bug where entities move oddly. This is likely a mistranslation on my part.